# alan-partridge-interface

./: Cargo.toml  Dockerfile  index.html
.github/workflows/: ProdBuild.yml
css/: style.css
data/: quotes.json
js/: main.js
src/: main.rs
