[package]
name = "alan_partridge_quotes"
version = "0.1.0"
authors = ["Alexander Wilkinson <alexwilkinson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = "0.4.2"
rand = "0.7.3"
reqwest = "0.9.18"
serde = "*"
serde_json = "*"
serde_derive = "*"